--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,9 @@
 
     <groupId>org.example</groupId>
     <artifactId>data-structor</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
@@ -19,6 +21,9 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+        <module>Queue</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
